@@ -5,6 +5,7 @@ Changes:
 - Upgrade to FreeBSD 9.3 RELEASE p7.
 - Upgrade to Samba4.1 and add SMB3 in WebGUI.
 - Convert to pkgng.
+- Ability to backup and restore the encrypted configuration.
 - Improved WebGUI under PHP 5.6.
 - Improved WebGUI with Chrome.
 - Improved config restore verbose output.
